<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCF2F4"
    android:backgroundTint="#333e4f"
    >

    <Button
        android:id="@+id/hardButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="#673AB7"
        android:backgroundTint="#673AB7"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/hard"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/normalButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:flow_horizontalBias="0.5"
        />

    <Button
        android:id="@+id/normalButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="#673AB7"
        android:backgroundTint="#673AB7"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/normal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/easyButton"
        app:layout_constraintBottom_toTopOf="@+id/hardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:flow_horizontalBias="0.5"
        app:flow_verticalBias="0.1"
        />


    <Button
        android:id="@+id/easyButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="#673AB7"
        android:backgroundTint="#673AB7"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/easy"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@+id/normalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:flow_horizontalBias="0.5"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/selectedLevelTitle"
        android:textAlignment="center"
        android:paddingTop="14dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/easyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:flow_horizontalBias="0.5"
        app:layout_constraintVertical_chainStyle="spread"
        />

</androidx.constraintlayout.widget.ConstraintLayout>