<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCF2F4"
    android:backgroundTint="#333e4f"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Btnjugar"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="#a87ffb"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTwo"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/id_name1"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/playerName"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/id_name2"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTwo"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/id_name2"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/playerName"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/id_name1"
        app:layout_constraintTop_toTopOf="@id/guidelineTwo"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:contentDescription="@string/description"
        android:scaleType="fitCenter"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/gear"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineTwo"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>