<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCF2F4"
    android:backgroundTint="#333e4f"
    >

    <TextView
        android:id="@+id/levelTitle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:fontFamily="@font/roboto_regular"
        android:paddingTop="14dp"
        android:text="@string/easy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guidelineOne"
    />

    <TextView
        android:id="@+id/showPlayerOne"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:paddingTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/showPlayerTwo"
        app:layout_constraintTop_toBottomOf="@id/levelTitle"
        app:layout_constraintBottom_toTopOf="@id/pointsPlayerOne"
        android:textColorHint="@color/white"
        android:hint="@string/playerName"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

    <TextView
        android:id="@+id/pointsPlayerOne"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/startPoints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/pointsPlayerTwo"
        app:layout_constraintTop_toBottomOf="@id/showPlayerOne"
        app:layout_constraintBottom_toTopOf="@id/playerOnTurn"
        />

    <TextView
        android:id="@+id/showPlayerTwo"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:paddingTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/showPlayerOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelTitle"
        app:layout_constraintBottom_toTopOf="@id/pointsPlayerTwo"
        android:textColorHint="@color/white"
        android:hint="@string/playerName"
        />

    <TextView
        android:id="@+id/pointsPlayerTwo"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/startPoints"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/pointsPlayerOne"
        app:layout_constraintBottom_toTopOf="@id/playerOnTurn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showPlayerTwo"
        />


    <TextView
        android:id="@+id/playerOnTurn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:fontFamily="@font/roboto_regular"
        android:textAlignment="center"
        android:textColor="#f6bf75"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="8dp"
        android:hint="@string/playerName"
        android:textColorHint="#f6bf75"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintTop_toBottomOf="@id/levelTitle"
        app:layout_constraintBottom_toTopOf="@id/guidelineOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
    />

    <!-- Cards -->

    <ImageView
        android:id="@+id/card1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card2"
        app:layout_constraintTop_toBottomOf="@id/guidelineOne"
        app:layout_constraintBottom_toTopOf="@id/card5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
    />

    <ImageView
        android:id="@+id/card2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#27a3e9"
        android:backgroundTint="#27a3e9"
        app:layout_constraintStart_toEndOf="@id/card1"
        app:layout_constraintEnd_toStartOf="@id/card3"
        app:layout_constraintTop_toBottomOf="@id/guidelineOne"
        app:layout_constraintBottom_toTopOf="@id/card6"
        app:layout_constraintVertical_chainStyle="spread"
        />

    <ImageView
        android:id="@+id/card3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#27a3e9"
        android:backgroundTint="#27a3e9"
        app:layout_constraintStart_toEndOf="@id/card2"
        app:layout_constraintEnd_toStartOf="@id/card4"
        app:layout_constraintTop_toBottomOf="@id/guidelineOne"
        app:layout_constraintBottom_toTopOf="@id/card7"
        app:layout_constraintVertical_chainStyle="spread"
        />

    <ImageView
        android:id="@+id/card4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#27a3e9"
        android:backgroundTint="#27a3e9"
        app:layout_constraintStart_toEndOf="@id/card3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineOne"
        app:layout_constraintBottom_toTopOf="@id/card8"
        app:layout_constraintVertical_chainStyle="spread"
        />

    <ImageView
        android:id="@+id/card5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#27a3e9"
        android:backgroundTint="#27a3e9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card6"
        app:layout_constraintTop_toBottomOf="@id/card1"
        app:layout_constraintBottom_toTopOf="@id/guidelineTwo"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

    <ImageView
        android:id="@+id/card6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#27a3e9"
        android:backgroundTint="#27a3e9"
        app:layout_constraintStart_toEndOf="@id/card5"
        app:layout_constraintEnd_toStartOf="@id/card7"
        app:layout_constraintTop_toBottomOf="@id/card2"
        app:layout_constraintBottom_toTopOf="@id/guidelineTwo"
        />

    <ImageView
        android:id="@+id/card7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#27a3e9"
        android:backgroundTint="#27a3e9"
        app:layout_constraintStart_toEndOf="@id/card6"
        app:layout_constraintEnd_toStartOf="@id/card8"
        app:layout_constraintTop_toBottomOf="@id/card3"
        app:layout_constraintBottom_toTopOf="@id/guidelineTwo"
        />

    <ImageView
        android:id="@+id/card8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#27a3e9"
        android:backgroundTint="#27a3e9"
        app:layout_constraintStart_toEndOf="@id/card7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card4"
        app:layout_constraintBottom_toTopOf="@id/guidelineTwo"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#f6bf75"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/restart"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTwo"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>